fix(style): some gapless gallery pictures

--- a/sheepyart/assets/scss/main.scss
+++ b/sheepyart/assets/scss/main.scss
@@ -267,9 +267,9 @@ section > .thumbs-container{
 
 .thumb-holder {
   height: 300px;
-  margin-bottom: 5px;
   text-align: center;
   flex: 0 0 205px;
+  margin: 5px;
 }
 
 .thumb-text {
